--- a/css/master.css
+++ b/css/master.css
@@ -9,7 +9,7 @@ body {
 }
 
 .dan{
-  background-image: url("https://thebestclicker.github.io/danify/pics/dan.jpg");
+  background-image: url("https://thebestclicker.github.io/danify/pics/johannes.jpg");
 /*  background-color: black;*/
   background-repeat: no-repeat;
 /*  background-size: 300px 400px;*/
