--- a/css/master.css
+++ b/css/master.css
@@ -9,7 +9,7 @@ body {
 }
 
 .dan{
-  background-image: url("https://thebestclicker.github.io/danify/pics/johannes.jpg");
+  background-image: url("https://scontent-arn2-1.xx.fbcdn.net/v/t34.0-12/21361009_1816916271670099_1275055269_n.jpg?oh=98c0d2927aa5e90d061b7c411add1e88&oe=59B2BB37");
 /*  background-color: black;*/
   background-repeat: no-repeat;
 /*  background-size: 300px 400px;*/
